[package]
name = "mob_proxy"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.35", features = ["derive"] }
tokio = { version = "1.44.2", features = [
  "macros",
  "net",
  "rt",
  "rt-multi-thread",
] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.14", features = ["codec"] }
futures = "0.3.31"
log = "0.4.27"
env_logger = "0.11.8"
regex = "1.11.1"
